Corrections and improvements